tests/errors/expression-expected/errors.snap
---
source: tests/errors.rs
expression: output
---
error[E0029]: Expected an expression, but found a '*'.
  │
2 │ def main = * 2
  │            ^
  ╰─𜱶 tests/errors/expression-expected/main.pa:2:12
